infra/k8s/client1-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client1-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client1
  template:
    metadata:
      labels:
        app: client1
    spec:
      containers:
        - name: client1
          image: inventorymanagementsystem.azurecr.io/inventory/inventory_client
---
apiVersion: v1 
kind: Service
metadata:
  name: client1-serv
spec:
  selector:
    app: client1
  ports:
    - name: client1
      protocol: TCP
      port: 3001
      targetPort: 80
