infra/k8s/client2-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client2-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client2
  template:
    metadata:
      labels:
        app: client2
    spec:
      containers:
        - name: client2
          image: inventorymanagementsystem.azurecr.io/inventory/inventory_client
---
apiVersion: v1 
kind: Service
metadata:
  name: client2-serv
spec:
  selector:
    app: client2
  ports:
    - name: client2
      protocol: TCP
      port: 3002
      targetPort: 80
