infra/k8s/client3-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client3-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client3
  template:
    metadata:
      labels:
        app: client3
    spec:
      containers:
        - name: client3
          image: inventorymanagementsystem.azurecr.io/inventory/inventory_client
---
apiVersion: v1 
kind: Service
metadata:
  name: client3-serv
spec:
  selector:
    app: client3
  ports:
    - name: client3
      protocol: TCP
      port: 3003
      targetPort: 80
