infra/k8s/sql-server-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssqlserver-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssqlserver
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mssqlserver
    spec:
      securityContext:
        fsGroup: 10001
      containers:
      - name: mssqlserver
        image: 'mcr.microsoft.com/mssql/server:2019-CU4-ubuntu-18.04'
        ports:
        - containerPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-externel
spec:
  selector:
    app: mssqlserver
  ports:
    - protocol: TCP
      port: 31433
      targetPort: 1433
  type: LoadBalancer
