infra/k8s/store1-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store1-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store1
  template:
    metadata:
      labels:
        app: store1
    spec:
      containers:
        - name: store1
          image: registry.digitalocean.com/bbbipul/inventory_rest_api
---
apiVersion: v1 
kind: Service
metadata:
  name: store1-serv
spec:
  selector:
    app: store1
  ports:
    - name: store1
      protocol: TCP
      port: 5001
      targetPort: 80
