infra/k8s/store2-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store2-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store2
  template:
    metadata:
      labels:
        app: store2
    spec:
      containers:
        - name: store2
          image: inventorymanagementsystem.azurecr.io/inventory/inventory_rest_api
---
apiVersion: v1 
kind: Service
metadata:
  name: store2-serv
spec:
  selector:
    app: store2
  ports:
    - name: store2
      protocol: TCP
      port: 5002
      targetPort: 80
