infra/k8s/store3-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store3-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store3
  template:
    metadata:
      labels:
        app: store3
    spec:
      containers:
        - name: store3
          image: inventorymanagementsystem.azurecr.io/inventory/inventory_rest_api
---
apiVersion: v1 
kind: Service
metadata:
  name: store3-serv
spec:
  selector:
    app: store3
  ports:
    - name: store3
      protocol: TCP
      port: 5003
      targetPort: 80
