infra/k8s/ingress-serv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: inventory-ingress
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: supportapi-serv
          servicePort: 5004
        path: /memos/(.*)
      - backend:
          serviceName: store1-serv
          servicePort: 5001
        path: /store1/(.*)
      - backend:
          serviceName: store2-serv
          servicePort: 5002
        path: /store2/(.*)
      - backend:
          serviceName: store3-serv
          servicePort: 5003
        path: /store3/(.*)
      - backend:
          serviceName: client-serv
          servicePort: 3000
        path: /(.*)
